fix homepage spacing

--- a/components/FluidEngine/FluidEngine.module.css
+++ b/components/FluidEngine/FluidEngine.module.css
@@ -3,19 +3,17 @@
 	--fluidColumns: 24;
 	--grid-gutter: calc(var(--site-gutter, 4vw) - 34px);
 	--cell-max-width: calc(
-		(var(--site-max-width, 1300px) - (34px * (24 - 1))) / 24
+		(var(--site-max-width, 1550px) - (34px * (24 - 1))) / 24
 	);
 	--inset-padding: 0vw;
 	--row-height-scaling-factor: 0.0215;
 	--container-width: min(
-		var(--site-max-width, 1300px),
+		var(--site-max-width, 1550px),
 		calc(100vw - var(--site-gutter, 4vw) * 2 - var(--inset-padding))
 	);
 
 	display: grid;
 	position: relative;
-	row-gap: 20px;
-	column-gap: 34px;
 	grid-template-rows: repeat(
 		var(--fluidRows),
 		minmax(
@@ -29,4 +27,10 @@
 			minmax(0, var(--cell-max-width))
 		)
 		minmax(var(--grid-gutter), 1fr);
+		row-gap: clamp(20px, 2vw, 30px);
+}
+@media (min-width: 768pxpx) {
+	.FluidEngine {
+		column-gap: clamp(0px, 2vw, 34px);
+	}
 }
