--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -18,7 +18,7 @@ body {
 
 	--site-gutter: 7vw;
 	--mobile-site-gutter: 6vw;
-	--site-max-width: 1300px;
+	--site-max-width: 1550px;
 }
 
 *,
